--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2,32 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'in <string>' requires string as left operand, not int",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[44], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m n:\n\u001b[1;32m      6\u001b[0m     x\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28minput\u001b[39m())\n\u001b[0;32m----> 7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m:\n\u001b[1;32m      8\u001b[0m         \u001b[38;5;28mprint\u001b[39m(i)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'in <string>' requires string as left operand, not int"
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[126], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m n\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m stack\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
-    "n=list(range(1,31))\n",
+    "n,k = map(int,input().split())\n",
     "\n",
+    "queue = [i for i in range(1,n+1)]\n",
     "\n",
+    "while queue:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "Case #4: me likes mom my \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=int(input())\n",
     "\n",
-    "for i in n:\n",
-    "    x=int(input())\n",
-    "    if i not in x:\n",
-    "        print(n)\n",
+    "for _ in range(n):\n",
+    "    answer = ''\n",
+    "    sentence = input().split()\n",
+    "    for i in range(len(sentence)):\n",
+    "        answer += sentence.pop()+\" \"\n",
     "\n",
-    "\n"
+    "    print(f'Case #{i+1}: {answer}')\n"
    ]
   },
   {
