--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2,79 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[126], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m n\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m stack\u001b[38;5;241m=\u001b[39m[]\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
-     ]
-    }
-   ],
-   "source": [
-    "n,k = map(int,input().split())\n",
-    "\n",
-    "queue = [i for i in range(1,n+1)]\n",
-    "\n",
-    "while queue:\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'list'>\n",
-      "Case #4: me likes mom my \n"
+      "hello\n",
+      "Baekjoon\n",
+      "Online Judge\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "n=int(input())\n",
-    "\n",
-    "for _ in range(n):\n",
-    "    answer = ''\n",
-    "    sentence = input().split()\n",
-    "    for i in range(len(sentence)):\n",
-    "        answer += sentence.pop()+\" \"\n",
-    "\n",
-    "    print(f'Case #{i+1}: {answer}')\n"
+    "while True:\n",
+    "    try:\n",
+    "        lines = input()\n",
+    "        print(lines)\n",
+    "    except EOFError:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '5 1 1 12 34 5 500 40 60 1000 1000'",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m T\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m a,b\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m,sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline()\u001b[38;5;241m.\u001b[39msplit())\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m+\u001b[39mb)\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '5 1 1 12 34 5 500 40 60 1000 1000'"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(sys\u001b[38;5;241m.\u001b[39mstdin\u001b[38;5;241m.\u001b[39mreadline())\n\u001b[1;32m      4\u001b[0m goodword \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "T=int(input())\n",
     "\n",
-    "a,b=map(int,sys.stdin.readline().split())\n",
-    "print(a+b)\n"
+    "n = int(sys.stdin.readline())\n",
+    "goodword = 0\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    stack=[]\n",
+    "    word = list(sys.stdin.readline())\n",
+    "    for i in word:\n",
+    "        if len(stack) == 0:\n",
+    "            stack.append(i)\n",
+    "        elif stack[-1] == i:\n",
+    "            stack.pop(-1)\n",
+    "        else:\n",
+    "            stack.append(i)\n",
+    "    \n",
+    "    if len(stack) <= 0:\n",
+    "        goodword += 1\n",
+    "\n",
+    "print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def myring(n,answer=0):\n",
+    "    word = input()\n",
+    "    ring = input()*2\n",
+    "    if word in ring:\n",
+    "        answer += 1\n",
+    "        return myring(n-1)\n",
+    "    \n",
+    "\n",
+    "print(myring(3))"
    ]
   }
  ],
@@ -94,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
